--- a/taichihub/templates/index.html
+++ b/taichihub/templates/index.html
@@ -87,10 +87,11 @@ hub.bind_image(img)
                         <div class="mdui-chip mdui-float-left mdui-valign">
                             <span class="mdui-chip-title" mdui-tooltip="{content: 'Shader status'}" id="label-status">idle</span>
                         </div>
+                        <button class="mdui-btn mdui-btn-icon mdui-hoverable mdui-ripple mdui-float-right" mdui-tooltip="{content: 'Shader settings..'}" mdui-dialog="{target: '#dialog-settings'}"><i class="mdui-icon material-icons">settings</i></button>
                         <button class="mdui-btn mdui-btn-icon mdui-hoverable mdui-ripple mdui-float-right" mdui-tooltip="{content: 'Load a template..'}" mdui-dialog="{target: '#dialog-load'}"><i class="mdui-icon material-icons">folder_open</i></button>
                         <button class="mdui-btn mdui-btn-icon mdui-hoverable mdui-ripple mdui-float-right" mdui-tooltip="{content: 'Save this shader'}" id="button-save"><i class="mdui-icon material-icons">save</i></button>
                         <div class="mdui-chip mdui-float-right mdui-valign">
-                            <span class="mdui-chip-title" mdui-tooltip="{content: 'Save status'}" id="label-savestatus">unsaved</span>
+                            <span class="mdui-chip-title" mdui-tooltip="{content: 'Save/load status'}" id="label-savestatus">unsaved</span>
                         </div>
                     </div>
                 </div>
@@ -124,21 +125,21 @@ hub.bind_image(img)
             </div>
 
             <div class="mdui-textfield mdui-textfield-floating-label">
-                <textarea class="mdui-textfield-input" rows="25" placeholder="Output will be displayed here" id="text-output" disabled></textarea>
+                <textarea class="mdui-textfield-input mdui-img-rounded" rows="25" placeholder="Output will be displayed here" id="text-output" disabled></textarea>
             </div>
         </div>
 
         <div class="mdui-dialog" id="dialog-load">
             <div class="mdui-dialog-title">Load a template</div>
             <div class="mdui-dialog-content">
-            What's the shader ID you'd like to load?<br/>
+            <p>What's the shader's ID you'd like to load as a template?</p>
             <div class="mdui-textfield">
                 <input class="mdui-textfield-input" type="text" placeholder="Shader ID" id="text-load-name"/>
             </div>
             </div>
             <div class="mdui-dialog-actions">
-                <button class="mdui-btn mdui-ripple" mdui-dialog-cancel>Cancel</button>
                 <button class="mdui-btn mdui-ripple" mdui-dialog-confirm id="button-load">OK</button>
+                <button class="mdui-btn mdui-ripple" mdui-dialog-cancel>Cancel</button>
             </div>
         </div>
 
@@ -148,6 +149,7 @@ hub.bind_image(img)
         <script src="https://cdn.bootcdn.net/ajax/libs/codemirror/5.35.0/addon/selection/active-line.min.js"></script>
 
         <script src="/taichi.js"></script>
+        <script src="/hubview.js"></script>
 
         <script>
         var editor = CodeMirror.fromTextArea(document.getElementById('text-code'), {
@@ -174,251 +176,10 @@ hub.bind_image(img)
         $(function() {
             editor.setSize('100%', 496);
 
-
-            class HubView {
-                constructor() {
-                    this.paused = false;
-                    this.frame = 0;
-
-                    this.shaderName = {{ shader_name|tojson }};
-
-                    $('#button-pause').click(this.onPause.bind(this));
-                    $('#button-reset').click(this.onReset.bind(this));
-                    $('#button-save').click(this.onSave.bind(this));
-                    $('#button-load').click(this.onLoad.bind(this));
-                    $('#button-run').click(this.onRun.bind(this));
-
-                    if (this.shaderName != null) {
-                        this.doLoad(this.shaderName);
-                    }
-                }
-
-                terminate() {
-                    this.frame = 0;
-                    if (typeof this.gui != 'undefined')
-                        this.gui.stopped = true;
-                    this.gui = undefined;
-                }
-
-                play() {
-                    this.terminate();
-
-                    let canvas = document.getElementById('canvas');
-                    this.gui = new TaichiGUI(canvas, 512);
-
-                    this.reset = this.program.get('reset');
-                    this.substep = this.program.get('substep');
-                    this.render = this.program.get('render');
-
-                    let substep_nr = this.program.get('hub_get_substep_nr');
-                    if (typeof substep_nr != 'undefined') {
-                        substep_nr();
-                        this.substep_nr = this.program.get_ret_int(0);
-                    } else {
-                        this.substep_nr = 1;
-                    }
-
-                    this.scene_type = undefined;
-                    this.export_data = undefined;
-                    if (typeof this.export_data == 'undefined') {
-                        this.export_data = this.program.get('hub_get_image');
-                        this.scene_type = 'image';
-                    }
-                    if (typeof this.export_data == 'undefined') {
-                        this.export_data = this.program.get('hub_get_particles');
-                        this.scene_type = 'particles';
-                    }
-                    if (typeof this.render == 'undefined' && typeof this.substep == 'undefined') {
-                        console.error('Cannot find the kernel to render / step data!');
-                    }
-                    if (typeof this.export_data == 'undefined') {
-                        console.error('Cannot find the kernel to export data!');
-                    }
-
-                    if (typeof this.reset != 'undefined') {
-                        this.reset();
-                    }
-                    this.onReset();
-
-                    this.fps = 0;
-                    this.last_time = Date.now();
-                    this.gui.animation(this.perFrame.bind(this));
-                }
-
-                onUpdate() {
-                    this.program.set_arg_float(0, this.frame * 0.04);
-                    if (typeof this.substep != 'undefined') {
-                        for (var i = 0; i < this.substep_nr; i++) {
-                            this.substep();
-                        }
-                    }
-                    if (typeof this.render != 'undefined') {
-                        this.render();
-                    }
-
-                    if (this.scene_type == 'image') {
-                        let extr = this.program.set_ext_arr(0, [this.gui.resx, this.gui.resy, 4]);
-                        this.export_data();
-                        this.gui.set_image(extr);
-                    } else if (this.scene_type == 'particles') {
-                        let extr = this.program.set_ext_arr(0, [0, 2]);
-                        this.export_data();
-                        this.program.get_ret_float(0);
-                        this.gui.circles(extr);
-                    }
-                }
-
-                perFrame() {
-                    if (this.paused)
-                        return;
-
-                    if((Date.now() - this.last_time) >= 1000) {
-                        $('#label-fps').html(this.fps + ' FPS');
-                        this.last_time = Date.now();
-                        this.fps = 0;
-                    }
-                    this.onUpdate();
-                    this.fps++;
-                    this.frame++;
-                }
-
-                loadShader(url) {
-                    $.ajax({
-                        url: url,
-                        type: 'GET',
-                        dataType: 'text',
-                        success: function(res) {
-                            $('#label-savestatus').html('loaded');
-                            console.log('Successfully loaded shader:', url);
-                            editor.setValue(res);
-                        }.bind(this),
-                        error: function(xmlhr, err, exc) {
-                            $('#label-status').html('error');
-                            alert('Error loading shader: ' + err + exc);
-                        },
-                    });
-                }
-
-                loadScript(url) {
-                    $.ajax({
-                        url: url,
-                        type: 'GET',
-                        dataType: 'text',  // we will evaluate it ourself
-                        data: { dummy: Date.now() },
-                        success: function(res) {
-                            $('#label-status').html('loaded');
-                            console.log('Successfully loaded:', url);
-                            let module = eval('(function mod' + Date.now() + '() { ' + res + '; return Module; })()');
-                            console.log(module);
-                            this.program = new Taichi(module);
-
-                            this.program.ready(function() {
-                                console.log('Replaying program...');
-                                $('#label-status').html('ready');
-                                this.play(this.program);
-                            }.bind(this));
-                        }.bind(this),
-                        error: function(xmlhr, err, exc) {
-                            $('#label-status').html('error');
-                            alert('Error loading compiled script: ' + err + exc);
-                        },
-                    });
-                }
-
-                onPause() {
-                    this.paused = !this.paused;
-                    $('#icon-pause').html(this.paused ? 'play_arrow' : 'pause');
-                }
-
-                onReset() {
-                    this.frame = 0;
-                    if (typeof this.reset != 'undefined') {
-                        this.reset();
-                    }
-                    this.onUpdate();
-                }
-
-                onSave() {
-                    if ($('#label-status').html() != 'ready') {
-                        alert('The shader must RUN successfully (ready) before save!');
-                        return;
-                    }
-                    var code = editor.getValue();
-                    var name = this.shaderName;
-                    $('#label-savestatus').html('saving');
-                    $.ajax({
-                        type: 'POST',
-                        url: '/save',
-                        data: {name: name, code: code},
-                        datatype: 'json',
-                        success: function(res) {
-                            console.log('Server load result:', res);
-                            $('#label-savestatus').html(res.status);
-                            if (res.status == 'conflict') {
-                                alert('Name already used by other users: ' + name);
-                            }
-                        }.bind(this),
-                        error: function(xmlhr, err, exc) {
-                            $('#label-savestatus').html('error');
-                            alert('Error requesting server: ' + err + exc);
-                        },
-                    });
-                }
-
-                onLoad() {
-                    var name = $('#text-load-name').val();
-                    this.doLoad(name);
-                }
-
-                doLoad(name) {
-                    $.ajax({
-                        type: 'GET',
-                        url: '/load',
-                        data: {name: name},
-                        datatype: 'json',
-                        success: function(res) {
-                            console.log('Server load result:', res);
-                            if (res.status == 'found') {
-                                this.loadShader('/cache/' + res.cacheid);
-                            } else if (res.status == 'notfound') {
-                                res.status = 'new';
-                            }
-                            $('#label-savestatus').html(res.status);
-                        }.bind(this),
-                        error: function(xmlhr, err, exc) {
-                            $('#label-savestatus').html('error');
-                            alert('Error requesting server: ' + err + exc);
-                        },
-                    });
-                }
-
-                onRun() {
-                    $('#label-status').html('compiling');
-                    var code = editor.getValue();
-                    $.ajax({
-                        type: 'POST',
-                        url: '/compile',
-                        data: {code: code},
-                        datatype: 'json',
-                        success: function(res) {
-                            console.log('Server compile result:', res);
-                            $('#label-status').html(res.status);
-                            if ('output' in res) {
-                                $('#text-output').val(res.output);
-                            }
-                            if (res.status == 'success' || res.status == 'cached') {
-                                this.loadScript(res.script);
-                            }
-                        }.bind(this),
-                        error: function(xmlhr, err, exc) {
-                            $('#label-status').html('error');
-                            alert('Error requesting server: ' + err + exc);
-                        },
-                    });
-                }
-            }
-
-            taichihub = new HubView();
+            var canvas = document.getElementById('canvas');
+            var shaderName = {{ shader_name|tojson }};
+            taichihub = new HubView(canvas, editor, shaderName);
+            taichihub.bindButtons();
         });
         </script>
     </body>
