--- a/taichihub/templates/index.html
+++ b/taichihub/templates/index.html
@@ -61,9 +61,8 @@
 
             <div class="mdui-row">
                 <div class="mdui-card mdui-col-xs-6 mdui-m-l-1 mdui-m-r-1">
-                      <div class="mdui-card-media">
-                        <div class="mdui-textfield mdui-textfield-floating-label">
-                            <textarea class="mdui-textfield-input" rows="24" placeholder="Code here" id="text-code">
+                      <div class="mdui-img-fluid mdui-img-rounded mdui-center mdui-valign mdui-m-t-1" class="mdui-card-media">
+                        <textarea rows="24" placeholder="Code here" id="text-code">
 import taichi as ti
 import numpy as np
 import hub
@@ -78,8 +77,6 @@ def render(t: float):
 
 hub.bind_image(img)
 </textarea>
-
-                        </div>
                     </div>
 
                     <div class="mdui-card-actions mdui-m-t-1 mdui-m-b-1">
