add jupyter to image

--- a/taichihub/templates/browse.html
+++ b/taichihub/templates/browse.html
@@ -104,7 +104,9 @@
             </script>
         {% endfor %}
 
-            <button href="javascript:;" onclick="window.location.href = '/new'" class="mdui-m-l-1 mdui-m-r-1 mdui-m-t-2 mdui-m-b-1 mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple">Create new..</button>
+            <button href="javascript:;" onclick="window.location.href = '/new'" class="mdui-m-l-1 mdui-m-r-1 mdui-m-t-2 mdui-m-b-1 mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple mdui-icon-left">
+                <i class="mdui-icon material-icons">add</i>Create new..
+            </button>
         </div>
 
         <script src="//cdn.jsdelivr.net/npm/mdui@1.0.0/dist/js/mdui.min.js"></script>
