--- a/taichihub/templates/help.html
+++ b/taichihub/templates/help.html
@@ -56,5 +56,8 @@
         </div>
 
         <script src="//cdn.jsdelivr.net/npm/mdui@1.0.0/dist/js/mdui.min.js"></script>
+        <script>
+        window.location.href = 'https://github.com/taichi-dev/taichi.js/blob/master/README.rst';
+        </script>
     </body>
 </html>
